[package]
name = "dbusgraft"
version = "0.1.0"
edition = "2021"

[dependencies]
aargvark = "0.8"
futures = "0.3"
loga = "0.5"
moka = { version = "0.12", features = ["future"] }
tokio = { version = "1", features = ["rt", "macros", "signal"] }
tokio-util = "0.7"
zbus = { git = "https://github.com/dbus2/zbus", rev = "ec0f51f11ea07cff75417cdf3c3e5119b6ca74d4" }
